--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -6,3 +6,9 @@ html {
   padding-bottom: 40px;
   padding-top:  40px;
 }
+
+.markdown-content ul,
+.markdown-content ol {
+  padding-left: 1.5em;
+  margin: 1em 0;
+}
